chore: fix some warnings from code inspections